--- a/LangGraph/LangGraph_MultiAgent.ipynb
+++ b/LangGraph/LangGraph_MultiAgent.ipynb
@@ -171,7 +171,7 @@
         "    It employs dynamic retrieval to adjust the search threshold based on relevance.\n",
         "    The function generates content using the provided prompt and tools, and returns the response.\n",
         "    \"\"\"\n",
-        "    model = GenerativeModel(\"gemini-2.0-flash-001\")\n",
+        "    model = GenerativeModel(\"gemini-1.5-pro\")\n",
         "    tool = Tool.from_google_search_retrieval(\n",
         "        grounding.GoogleSearchRetrieval(\n",
         "            # Optional: For Dynamic Retrieval\n",
